--- a/_embed/static/page.css
+++ b/_embed/static/page.css
@@ -23,7 +23,7 @@
 	display:flex;
 	flex-direction: row;
 	flex-wrap:nowrap;
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 #menu-bar div {
