--- a/_embed/static/widgets.css
+++ b/_embed/static/widgets.css
@@ -158,7 +158,7 @@ picture img {
 .slideshow {
 	display:flex;
 	flex-direction:row;
-	overflow-x: scroll;
+	overflow-x: auto;
 	overflow-y: hidden;
 	scroll-snap-type: x mandatory;
 	-webkit-overflow-scrolling: touch;
